--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,6 @@ server {
         if ($request_uri ~ ^/(.*)\.html(\?|$)) {
             return 302 /$1;
         }
-        try_files $uri $uri/ $uri.html =404;
+        try_files $uri $uri/ $uri.html =404 /404;
     }
 }
