Add sitemap code

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,16 @@
 server {
     listen 80;
-    index index.html index.htm;
-    server_name localhost;
+    server_name localhost;  # Consider changing this to your actual domain name
+
+    root /usr/share/nginx/html;  # Assuming your files are served from here
 
     location / {
-        root /usr/share/nginx/html;
+        # Handle requests for HTML files to strip the extension
         if ($request_uri ~ ^/(.*)\.html(\?|$)) {
             return 302 /$1;
         }
-        try_files $uri $uri/ $uri.html =404 /404;
+
+        # Serve files directly, including XML files like sitemap.xml
+        try_files $uri $uri/ $uri.html =404;
     }
 }
