--- a/docker-compose-hetz.yaml
+++ b/docker-compose-hetz.yaml
@@ -3,7 +3,7 @@ services:
   easyspark:
     build: .
     image: zachtsk/spark-made-easy:latest
-    container_name: spark-made-easy
+    container_name: easyspark
 
 
 networks:
